--- a/src/UI_Design/ProductList/styles.module.scss
+++ b/src/UI_Design/ProductList/styles.module.scss
@@ -10,18 +10,19 @@
         padding: 30px;
     }
 
-    @media (max-width: '900px') {
-        grid-template-columns: auto auto auto;
-        padding: 15px;
+    // @media (max-width: '900px') {
+    //     grid-template-columns: auto auto auto;
+    //     padding: 15px;
 
-    }
+    // }
     @media (max-width: '600px') {
-        grid-template-columns: auto auto auto;
-        padding: 15px;
+        grid-template-columns: 49% 49%;
+        padding: 10px;
+        gap: 10px;
 
     }
 
-    @media (max-width: '350px') {
+    @media (max-width: '310px') {
         grid-template-columns: auto;
         padding: 10px;
 
