--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -14,7 +14,35 @@
          display: flex;
          align-items: center;
          justify-content: space-between;
-
+.dashboard_page{
+    color: #fff;
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: 6px;
+    border-radius: 4px;
+    font-size: 20px;
+    font-weight: 500;
+    img{
+        display: none;
+    }
+     @media (max-width: '800px') {
+                 border: none;
+                display: block;
+             }
+    &:hover{
+        background-color: #fff;
+        a{
+            color: indigo;
+        }
+    }
+    a{
+        color: #fff;
+         @media (max-width: '1200px') {
+                 display: none;
+             }
+    }
+    
+}
 
          .menu_icon {
              color: #fff;
