--- a/src/UI_Design/SelectOption/styles.module.scss
+++ b/src/UI_Design/SelectOption/styles.module.scss
@@ -24,6 +24,7 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
     option {
+      padding: 5px;
       font-family: 'Montserrat';
     }
     margin-right: 20px;
