--- a/src/Admin/Pages/Add_Product/styles.module.scss
+++ b/src/Admin/Pages/Add_Product/styles.module.scss
@@ -1,6 +1,11 @@
 .add_product {
   margin-top: 65px;
   padding: 20px;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   form {
     width: 70%;
@@ -21,8 +26,9 @@
     }
 
     .inputs {
-      margin: 17px 0;
+      margin: 20px 0;
       position: relative;
+
 
       label {
         position: absolute;
@@ -82,18 +88,16 @@
       margin-top: 20px;
 
       @media (max-width: '800px') {
-        // flex-direction: column;
-        // align-items: start;
         width: 100%;
+
       }
 
       .categories {
+        width: 50%;
         display: flex;
         flex-direction: column;
         align-items: start;
 
-        // margin-right: 50px;
-        //  margin-bottom: 10px;
         label {
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -106,32 +110,26 @@
           font: inherit;
           padding: 8px 45px 8px 10px;
           margin-right: 5px;
-
-          @media (max-width: '450px') {
-            font-size: 14px;
-            padding: 6px 35px 6px 10px;
-            font: small;
-            height: 35px;
-            // margin-bottom: 15px;
-
-
-          }
-
           -webkit-box-sizing: border-box;
           -moz-box-sizing: border-box;
           box-sizing: border-box;
           -webkit-appearance: none;
           -moz-appearance: none;
+          appearance: none;
+          @media (max-width: '450px') {
+            font-size: 13px;
+            font: small;
+            height: 33px;
+
+
+          }
+
+
         }
 
         .category_select {
-          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-          option {
-            font-family: 'Montserrat';
-          }
-
-          margin-right: 20px;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;       
+         margin-right: 20px;
           background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
           linear-gradient(135deg, #fff 50%, transparent 50%),
           linear-gradient(to right, indigo, indigo);
@@ -164,17 +162,17 @@
               color: #000;
             }
           }
+          option {
+            font-family: 'Montserrat';
+          }
         }
 
 
 
       }
 
-      .photoDown {
-
-        .file_input {
-
-          display: flex;
+      .photoDown .file_input {
+        display: flex;
           justify-content: space-between;
           align-items: center;
 
@@ -197,7 +195,7 @@
           }
 
           .choose_file {
-            width: 180px;
+            // width: 180px;
             height: 36px;
             border-radius: 5px;
             border: 1px solid #000;
@@ -209,36 +207,40 @@
             justify-content: space-between;
             background-color: transparent;
 
-           
-             @media (max-width: '510px') {
-                                 width: 150px;
-                   height: 32px;
-              
-            }
-             @media (max-width: '355px') {
-                                 width: 110px;
-                   height: 32px;
-                               padding: 0 4px;
 
-              
+            @media (max-width: '510px') {
+              height: 32px;
+
             }
-             span {
+
+            @media (max-width: '355px') {
+              width: 100%;
+              height: 33px;
+              padding: 0 4px;
+              // margin: auto;
+
+            }
+
+            span {
               font-size: 14px;
- @media (max-width: '355px') {
-                   font-size: 12px;
-              
-            }
+
+              @media (max-width: '355px') {
+                font-size: 13px;
+
+              }
             }
 
             .camera {
-                width: 25px;
-                   height: 25px;
-              
+              width: 25px;
+              height: 25px;
+              margin-right: 5px;
+
               @media (max-width: '355px') {
-                   width: 18px;
-                   height: 18px;
-              
-            }
+                width: 18px;
+                height: 18px;
+                margin-right: 5px;
+
+              }
 
             }
 
@@ -255,7 +257,6 @@
 
               }
             }
-          }
 
         }
 
@@ -310,24 +311,16 @@
         }
 
         &:hover {
-          transform: scale(1.05);
+          // transform: scale(1.05);
           transition: all .3s;
         }
-        &:active{
-            transform: scale(0.8);
 
-        }
+        // &:active {
+        //   transform: scale(0.8);
+
+        // }
       }
     }
-
-
-
-
-
-
-
-
-
-
+    
   }
 }
