--- a/src/Admin/Pages/All_Products/styles.module.scss
+++ b/src/Admin/Pages/All_Products/styles.module.scss
@@ -8,10 +8,12 @@
         width: 80%;
         margin: auto;
         text-align: end;
- @media (max-width: '1170px') {
-        width: 100%;
 
-    }
+        @media (max-width: '1170px') {
+            width: 100%;
+
+        }
+
         button {
 
             background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
@@ -33,15 +35,15 @@
 
             &:hover {
                 transition: all .4s;
-                transform: scale(1.08);
-                background-position: right center;
+                // transform: scale(1.08);
+                // background-position: right center;
                 /* change the direction of the change here */
                 color: #fff;
                 text-decoration: none;
 
                 .fiPlus {
-                    transition: all .4s;
-                    transform: rotate(-180deg);
+                    // transition: all .4s;
+                    // transform: rotate(-180deg);
                 }
             }
 
@@ -182,12 +184,13 @@
 
         }
 
-p{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 17px;
-    font-weight: 700;
-    margin-bottom: 15px;
-}
+        p {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 17px;
+            font-weight: 700;
+            margin-bottom: 15px;
+        }
+
         table {
             border: 1px solid #ccc;
             border-collapse: collapse;
@@ -196,7 +199,7 @@ p{
             width: 100%;
             table-layout: fixed;
 
-             
+
             tr {
                 background-color: #fff;
                 border: 1px solid #ddd;
@@ -210,10 +213,11 @@ p{
 
                 &:nth-child(1) {
                     width: 100px;
-                     @media (max-width: '1170px') {
-                    
-                    width: 100%;
-                }
+
+                    @media (max-width: '1170px') {
+
+                        width: 100%;
+                    }
                 }
             }
 
