--- a/src/Pages/productDetails/styles.module.scss
+++ b/src/Pages/productDetails/styles.module.scss
@@ -11,6 +11,7 @@
         height: auto;
         padding-bottom: 35px;
         border-radius: 10px;
+        padding-top: 20px;
         // background-color: aliceblue;
 
         box-shadow: 1px 1px 6px -1px rgba(113, 102, 102, 0.69);
@@ -75,19 +76,76 @@
 
 
                 .about_product {
-                    padding-top: 50px;
                     padding-left: 15px;
-                       padding-right: 20px;
+                    padding-right: 20px;
+
                     @media (max-width: '900px') {
                         padding-top: 15px;
-
+                        padding-left: 10px;
+                        padding-right: 10px;
 
                     }
 
+                    .likes_views {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: start;
+
+                        h2 {
+                            font-family: Arial, Helvetica, sans-serif;
+                            font-size: 20px;
+                            @media (max-width: '420px') {
+                                font-size: 17px;
+                                margin-right: 15px;
+                            }
+                        }
+
+                        div {
+                            display: flex;
+                            align-items: center;
+
+                            span {
+                                color: #777;
+                                display: flex;
+                                align-items: center;
+                                
+                                &:nth-child(1) {
+                                    margin-right: 10px;
+                                }
+
+                                span {
+                                    margin-right: 5px;
+                                }
+                            }
+                        }
+                    }
+                   p{
+                       color: #999;
+                       margin: 8px 0;
+                   }
                     .add_product_btn {
                         display: flex;
                         justify-content: space-between;
                         align-items: center;
+
+                        @media (max-width: '600px') {
+                            flex-direction: column;
+                            align-items: start;
+
+
+                        }
+
+                        .price_addCount {
+                            width: 50%;
+                            display: flex;
+                            justify-content: space-between;
+
+                            @media (max-width: '600px') {
+                                width: 100%;
+
+
+                            }
+                        }
 
                         .addProduct {
                             display: flex;
@@ -110,6 +168,10 @@
                             padding: 5px;
                             margin: 20px 0;
 
+                            .fiPlus {
+                                margin-left: 8px;
+                            }
+
                             &:hover {
                                 transition: all .4s;
                                 transform: scale(1.08);
@@ -119,9 +181,17 @@
                                 text-decoration: none;
 
                                 .fiPlus {
+
                                     transition: all .4s;
                                     transform: rotate(-180deg);
                                 }
+                            }
+
+                            @media (max-width: '600px') {
+                                margin-left: auto;
+
+
+
                             }
 
                         }
@@ -168,16 +238,8 @@
                         color: rgb(9, 9, 9);
                     }
 
-                    h2 {
-                        font-family: Arial, Helvetica, sans-serif;
-                        font-size: 20px;
 
-                    }
 
-                    p {
-                        margin: 8px 0;
-                        color: #777;
-                    }
 
                     h3 {
                         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
