--- a/src/UI_Design/ProductCard/styles.module.scss
+++ b/src/UI_Design/ProductCard/styles.module.scss
@@ -33,7 +33,7 @@
             align-items: center;
         }
 
-      
+
         button {
             margin-top: 5px;
             background: transparent;
@@ -51,15 +51,17 @@
     .product_img {
         padding: 10px;
         padding-left: 0;
+
         img {
-            
-border-radius: 5px;
+
+            border-radius: 5px;
 
             width: 95%;
             height: 150px;
+
             @media (max-width: '600px') {
                 height: 100px;
-              
+
             }
         }
     }
@@ -69,42 +71,63 @@ border-radius: 5px;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        padding-bottom: 20px;
 
         h3 {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 20px;
-            margin: 10px 0;
+            font-size: 18px;
+font-weight: 600;
+            height: 30px;
+            padding-bottom: 10px;
 
             @media (max-width: '600px') {
                 font-size: 15px;
+                height: 30px;
+
             }
         }
 
     }
 
     .category {
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
         color: rgb(89, 88, 88);
+
+        p {
+            display: flex;
+            align-items: center;
+            color: rgb(142, 140, 140);
+
+            span {
+                margin-right: 5px;
+            }
+        }
     }
 
 
 
 
     .product_add {
+
         display: flex;
         justify-content: space-between;
         align-items: center;
         margin-top: 15px;
-         @media (max-width: '600px') {
-               flex-direction: column;
-              
-            }
-            span {
-                width: 100%;
-                text-align: left;
-        color: #696969;
-        font-weight: 600;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+
+        @media (max-width: '600px') {
+            flex-direction: column;
+
+        }
+
+        span {
+            width: 100%;
+            text-align: left;
+            color: #696969;
+            font-weight: 600;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     }
 
     // ~~~~~~~~~~~~~~~~~~~~~~
@@ -122,18 +145,19 @@ border-radius: 5px;
         align-items: center;
         width: var(--width);
         height: var(--height);
-        background: var(--button-color);
+        background-image: linear-gradient(to right, indigo 0%, #580ed0 51%, rgb(44, 11, 68) 100%);
         border: none;
         position: relative;
         text-align: center;
         border-radius: 0.45em;
         font-family: "Arial";
         transition: background 0.3s;
-         @media (max-width: '600px') {
+
+        @media (max-width: '600px') {
             margin-top: 10px;
-               width: 100%;
-              
-            }
+            width: 100%;
+
+        }
     }
 
     .product_btn::before {
@@ -171,6 +195,8 @@ border-radius: 5px;
         display: flex;
         align-items: center;
         justify-content: center;
+        top: 0;
+        color: #fff;
     }
 
     .button_wrapper,
@@ -182,11 +208,17 @@ border-radius: 5px;
         height: 100%;
         left: 0;
         color: #fff;
+
+        .cart_icon {
+            color: #fff;
+        }
+
+        span {
+            color: #fff;
+        }
     }
 
-    .text {
-        top: 0
-    }
+
 
     .text,
     .icon {
@@ -207,7 +239,7 @@ border-radius: 5px;
     }
 
     .product_btn:hover {
-        background: indigo;
+        background-image: linear-gradient(to right, indigo 0%, #580ed0 51%, rgb(44, 11, 68) 100%);
     }
 
     .product_btn:hover .text {
@@ -229,7 +261,7 @@ border-radius: 5px;
 
     // ~~~~~~~~~~~~~~~~~~~~~~
 
-    
+
 
 
 }
@@ -260,85 +292,90 @@ border-radius: 5px;
 
     }
 }
-.form_{
+
+.form_ {
     display: flex;
     align-items: start;
-    img{
+
+    img {
         width: 200px;
     }
-.form_comments {
-    width: 70%;
-    padding: 0 10px;
-    padding-top: 15px;
 
-    @media (max-width: '600px') {
-       width: 100%;
-    }
+    .form_comments {
+        width: 70%;
+        padding: 0 10px;
+        padding-top: 15px;
 
-    .comments_box {
-        padding: 15px;
-        border-radius: 4px;
-        box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
-        -webkit-box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
-        -moz-box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
-        height: 300px;
-        overflow-y: scroll;
-        scrollbar-width: thin;
-        scrollbar-color: rgb(102, 7, 169) white;
-        scrollbar-width: 2px;
-
-
-
-.comments_{
-    margin: 10px 0;
-    display: flex;
-    align-items: start;
-}
-        .user_img_name {
-            display: flex;
-            align-items: start;
-
-            img {
-                margin-right: 10px;
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                border: 1px solid indigo
-            }
-
-            p {
-                font-size: 14px;
-                font-weight: 700;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            }
-            
+        @media (max-width: '600px') {
+            width: 100%;
         }
-        h4{
+
+        .comments_box {
+            padding: 15px;
+            border-radius: 4px;
+            box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
+            -webkit-box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
+            -moz-box-shadow: 1px 1px 7px -2px rgba(113, 100, 100, 0.72);
+            height: 300px;
+            overflow-y: scroll;
+            scrollbar-width: thin;
+            scrollbar-color: rgb(102, 7, 169) white;
+            scrollbar-width: 2px;
+
+
+
+            .comments_ {
+                margin: 10px 0;
+                display: flex;
+                align-items: start;
+            }
+
+            .user_img_name {
+                display: flex;
+                align-items: start;
+
+                img {
+                    margin-right: 10px;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    border: 1px solid indigo
+                }
+
+                p {
+                    font-size: 14px;
+                    font-weight: 700;
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                }
+
+            }
+
+            h4 {
                 margin-left: 15px;
                 font-size: 15px;
                 font-family: 'Times New Roman', Times, serif;
             }
-    }
-
-    .add_comment {
-        position: relative;
-        margin-top: 20px;
-
-        .send_btn {
-            position: absolute;
-            right: -10px;
-            top: -5px;
         }
 
-        input {
-            width: 90%;
-            outline: none;
-            border: none;
-            border-bottom: 1px solid indigo;
-            font-size: 20px;
-            height: 30px;
+        .add_comment {
+            position: relative;
+            margin-top: 20px;
 
+            .send_btn {
+                position: absolute;
+                right: -10px;
+                top: -5px;
+            }
+
+            input {
+                width: 90%;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid indigo;
+                font-size: 20px;
+                height: 30px;
+
+            }
         }
     }
-}
 }
