add my-orders page, see all orders

--- a/src/Admin/Pages/Add_Product/styles.module.scss
+++ b/src/Admin/Pages/Add_Product/styles.module.scss
@@ -41,8 +41,8 @@
         font-size: 14px;
         color: #000;
       }
-
-      input {
+      
+      input,textarea {
         &:user-invalid {
           border: 2px solid #dc1515;
         }
@@ -55,7 +55,7 @@
         border: 2px #dedada solid;
         padding: 5px 15px;
         background-color: #fff;
-        font-size: 15;
+        font-size: 17px;
         font-weight: 500;
 
         @media (max-width: '1200px') {
@@ -75,9 +75,15 @@
         &:focus {
           border: 2px solid blueviolet;
           color: indigo;
+           
         }
       }
+textarea{
+        height: 70px;
+        padding-top: 8px;
+        font-size: 18px;
 
+      }
     }
 
     .select_photo {
