--- a/src/Components/Slider/style.module.scss
+++ b/src/Components/Slider/style.module.scss
@@ -1,166 +1,246 @@
+// .slider {
+//     width: 100%;
+//     height: 100vh;
+//     position: relative;
+//     overflow: hidden;
+//     background-color: black;
+//     @media (max-width: '800px') {
+//            height: 65vh;
+
+//     }
+// }
+
+// .slide {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     opacity: 0;
+//     transform: translateX(-50%);
+//     transition: all 0.5s ease;
+//     backdrop-filter: blur(10px);
+
+//     @media (max-width: '600px') {
+//         img {
+//             width: 100%;
+//             height: 100%;
+//         }
+//     }
+
+
+// }
+
+
+// .slide img {
+//     width: 100%;
+//     height: 100%;
+// }
+
+// .content {
+//     position: absolute;
+//     text-align: center;
+//     top: 17rem;
+//     left: 50%;
+//     width: 60%;
+//     padding: 3rem;
+//     display: flex;
+//     justify-self: center;
+//     align-items: center;
+//     flex-direction: column;
+//     transform: translateX(-50%);
+//     backdrop-filter: blur(5px);
+//     animation: slide-up 1s alternate 0.5s;
+//     animation-fill-mode: forwards;
+
+//     @media (max-width: '600px') {
+//         width: 80%;
+//         padding: 2rem;
+
+//     }
+
+//     button {
+//         background-color: indigo;
+//         color: #fff;
+//         padding: 7px;
+//         border: none;
+//         border-radius: 5px;
+//         font-family: 'Montserrat';
+//         font-size: 22px;
+
+//         &:hover {
+//             transition: all .3s;
+//             transform: scale(1.05);
+//         }
+
+//     }
+
+//     h2 {
+//         font-size: 4.5rem;
+//         font-family: 'Montserrat';
+
+//         @media (max-width: '800px') {
+//             font-size: 3rem;
+//         }
+
+//         @media (max-width: '420px') {
+//             font-size: 1.5rem;
+//         }
+//     }
+// }
+
+// @keyframes slide-up {
+//     0% {
+//         visibility: visible;
+//         top: 17rem;
+//     }
+
+//     100% {
+//         visibility: visible;
+//         top: 8rem;
+//     }
+// }
+
+
+
+// .content>* {
+//     color: #fff;
+//     margin-bottom: 1rem;
+// }
+
+// .current {
+//     opacity: 1;
+//     transform: translateX(0);
+// }
+
+// .current .content {
+//     opacity: 1;
+// }
+
+// .arrow {
+//     border: 2px solid #fff;
+//     border-radius: 50%;
+//     background: transparent;
+//     color: #fff;
+//     width: 2.5rem;
+//     height: 2.5rem;
+//     cursor: pointer;
+//     position: absolute;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     z-index: 2;
+//     backdrop-filter: blur(10px);
+
+//     @media (max-width: '1024px') {
+//         width: 1.5rem;
+//         height: 1.5rem;
+//         border: 1px solid #fff;
+//     }
+// }
+
+// .arrow:hover {
+//     backdrop-filter: brightness(60%);
+
+// }
+
+// .next {
+//     right: 1.5rem;
+//     color: #fff;
+//      @media (max-width: '800px') {
+//         right: 0.5rem;
+//     }
+// }
+
+// .prev {
+//     left: 1.5rem;
+//     color: #fff;
+//      @media (max-width: '800px') {
+//         left: 0.5rem;
+//     }
+// }
+
+// hr {
+//     height: 2px;
+//     background: #fff;
+//     width: 50%;
+// }
+
 .slider {
     width: 100%;
-    height: 100vh;
-    position: relative;
-    overflow: hidden;
-    background-color: black;
-    @media (max-width: '800px') {
-           height: 65vh;
-
-    }
-}
-
-.slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transform: translateX(-50%);
-    transition: all 0.5s ease;
-    backdrop-filter: blur(10px);
-
-    @media (max-width: '600px') {
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-
-}
-
-
-.slide img {
-    width: 100%;
-    height: 100%;
-}
-
-.content {
-    position: absolute;
-    text-align: center;
-    top: 17rem;
-    left: 50%;
-    width: 60%;
-    padding: 3rem;
     display: flex;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    transform: translateX(-50%);
-    backdrop-filter: blur(5px);
-    animation: slide-up 1s alternate 0.5s;
-    animation-fill-mode: forwards;
+    height: 80vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(../../assets/sliderImages/img5.jpg) center/cover no-repeat fixed;
+    .search_input {
+        position: relative;
+        width: 100%;
+        text-align: center;
 
-    @media (max-width: '600px') {
-        width: 80%;
-        padding: 2rem;
+        .input_box {
+            position: relative;
+            width: 40%;
+            margin: 0 auto;
+             @media (max-width: '1060px') {
+           width: 90%;
+        }
+            input {
+                width: 100%;
+                outline: none;
+                padding: 10px 20px;
+                border-radius: 30px;
+                height: 50px;
+                font-size: 20px;
+                border: 1px solid indigo;
+            }
 
-    }
-
-    button {
-        background-color: indigo;
-        color: #fff;
-        padding: 7px;
-        border: none;
-        border-radius: 5px;
-        font-family: 'Montserrat';
-        font-size: 22px;
-
-        &:hover {
-            transition: all .3s;
-            transform: scale(1.05);
+            .search_btn {
+                position: absolute;
+                background-color: #fff;
+                top: 15px;
+                right: 20px;
+                color: #666;
+            }
         }
 
-    }
-
-    h2 {
-        font-size: 4.5rem;
-        font-family: 'Montserrat';
-
-        @media (max-width: '800px') {
-            font-size: 3rem;
+        .searched_products {
+            position: absolute;
+            width: 50%;
+            height: auto;
+            background-color: #fff;
+            border-radius: 5px;
+            padding: 20px;
+            top: 60px;
+            left: 25%;
+ @media (max-width: '1060px') {
+           width: 90%;
+           left: 5%;
         }
+            .names {
+                display: flex;
+                flex-direction: column;
+                align-items: start;
 
-        @media (max-width: '420px') {
-            font-size: 1.5rem;
+                a {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 15px;
+                    color: #333;
+                    font-family: "Noto Sans";
+
+                    span {
+                        margin-left: 20px;
+                        font-size: 15px;
+                        font-weight: 600;
+
+                    }
+
+                    &:hover {
+                        color: indigo;
+                        font-weight: 600;
+                    }
+                }
+            }
         }
     }
-}
-
-@keyframes slide-up {
-    0% {
-        visibility: visible;
-        top: 17rem;
-    }
-
-    100% {
-        visibility: visible;
-        top: 8rem;
-    }
-}
-
-
-
-.content>* {
-    color: #fff;
-    margin-bottom: 1rem;
-}
-
-.current {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.current .content {
-    opacity: 1;
-}
-
-.arrow {
-    border: 2px solid #fff;
-    border-radius: 50%;
-    background: transparent;
-    color: #fff;
-    width: 2.5rem;
-    height: 2.5rem;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 2;
-    backdrop-filter: blur(10px);
-
-    @media (max-width: '1024px') {
-        width: 1.5rem;
-        height: 1.5rem;
-        border: 1px solid #fff;
-    }
-}
-
-.arrow:hover {
-    backdrop-filter: brightness(60%);
-   
-}
-
-.next {
-    right: 1.5rem;
-    color: #fff;
-     @media (max-width: '800px') {
-        right: 0.5rem;
-    }
-}
-
-.prev {
-    left: 1.5rem;
-    color: #fff;
-     @media (max-width: '800px') {
-        left: 0.5rem;
-    }
-}
-
-hr {
-    height: 2px;
-    background: #fff;
-    width: 50%;
 }
