--- a/src/Pages/cart/styles.module.scss
+++ b/src/Pages/cart/styles.module.scss
@@ -1,8 +1,5 @@
 .cart {
-    width: 100%;
-    display: flex;
-    align-items: start;
-    justify-content: space-between;
+    width: 100%;    
     height: auto;
     padding: 0 20px;
     padding-top: 80px;
@@ -13,6 +10,7 @@
         margin-top: 20px;
 
     }
+    
 
     .no_product {
         width: 100%;
@@ -22,16 +20,23 @@
     .total_price {
         position: fixed;
         right: 0;
-        top: 70px;
-        width: 33%;
+        top: 80px;
+        width: 25%;
         z-index: 31;
         border-radius: 5px;
         padding: 20px;
         background: #fff;
-        box-shadow: 1px 1px 11px 1px rgba(102, 93, 93, 0.67);
-        -webkit-box-shadow: 1px 1px 11px 1px rgba(102, 93, 93, 0.67);
-        -moz-box-shadow: 1px 1px 11px 1px rgba(102, 93, 93, 0.67);
+        box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
+-webkit-box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
+-moz-box-shadow: 0px 0px 6px -1px rgba(123,111,111,0.75);
+       @media (max-width: '1170px') {
+            position: static;
+            width: 100%;
+            margin-left: 0;
+            margin-top: 20px;
 
+
+        }
         .all_price {
             display: flex;
             align-items: center;
@@ -56,69 +61,56 @@
         .checkout_btn {
             width: 100%;
             margin-top: 50px;
-            display: flex;
-            justify-content: space-between;
-            gap: 15px;
+            // text-align: right;
+            
 
-            @media (max-width: '1170px') {
-                flex-direction: column;
-                gap: 0;
-                margin-top: 10px;
-
-
-            }
-
-            a {
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            button {
+                width: 100%;
+                display: block;
+                text-align: center;
                 background-color: indigo;
                 padding: 10px;
-                border-radius: 5px;
+                border-radius: 4px;
                 color: #fff;
-                font-size: 15px;
-                width: 100%;
+                font-size: 18px;
                 border: none;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+                font-family: "Montserrat";
                 &:hover {
                     transition: all .4s;
                     transform: scale(1.06);
-
-                    &:nth-child(2) {
-                        .right_icon {
-                            transform: translateX(20px);
-                            transition: all .4s;
-                        }
-                    }
-                }
-
-                .right_icon {
-                    margin-left: 5px;
-                }
-
+                    
+                }               
                 @media (max-width: '1170px') {
                     margin-top: 15px;
 
                 }
             }
+
         }
-
-
-        @media (max-width: '1170px') {
-            position: static;
-            width: 100%;
-            margin-left: 0;
+        .continue_shop{
+            display: flex;
+            align-items: center;
+            gap: 20px;
             margin-top: 20px;
-
-
+            &:hover{
+                text-decoration: underline;
+                .right_icon{
+                    transition: all .3s;
+                    transform: translateX(5px);
+                }
+            }
+            &:active{
+                color: indigo;
+            }
         }
+
+
+       
     }
 
     .overflow_table {
         overflow-x: auto;
-        width: 65%;
+        width: 75%;
         border-radius: 5px;
         // border: 1px solid indigo;
 
@@ -138,19 +130,14 @@
             table-layout: fixed;
 
              
-            tr {
-                background-color: #f8f8f8;
-                border: 1px solid #ddd;
-                padding: .35em;
-            }
+           
 
-            th,
-            td {
+            th {
                 padding: .625em;
                 text-align: start;
 
                 &:nth-child(1) {
-                    width: 100px;
+                    width: 250px;
                      @media (max-width: '1170px') {
                     
                     width: 100%;
@@ -159,9 +146,9 @@
             }
 
             th {
-                font-size: .85em;
-                letter-spacing: .1em;
-                text-transform: uppercase;
+                font-size: 15px;
+               letter-spacing: 2px;   
+               color: #363535;             
             }
 
             @media screen and (max-width: 1000px) {
@@ -195,14 +182,10 @@
                     text-align: right;
 
                     &::before {
-                        /*
-        * aria-label has no advantage, it won't be read inside a table
-        content: attr(aria-label);
-        */
+                       
                         content: attr(data-label);
                         float: left;
                         font-weight: bold;
-                        text-transform: uppercase;
                     }
 
                     &:last-child {
