--- a/src/Pages/checkout/styles.module.scss
+++ b/src/Pages/checkout/styles.module.scss
@@ -1,123 +1,510 @@
 .checkout {
-  margin-top: 70px;
   width: 100%;
   height: 100vh;
-  padding: 50px 20px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  place-items: center;
+  padding: 40px;
 
   @media (max-width: '1200px') {
-    flex-direction: column;
 
+    padding: 10px;
   }
 
-  form {
-    width: 60%;
+  .form_pay_details {
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    gap: 15px;
 
     @media (max-width: '1200px') {
+      grid-template-columns: auto;
+      padding: 10px;
+      margin-top: 70px;
+    }
+
+    form {
       width: 100%;
-    }
+      padding-right: 30px;
 
-    h1 {
-      font-size: 22px;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      margin-bottom: 20px;
-    }
-
-    .inputs {
-      margin: 17px 0;
-      position: relative;
-
-      label {
-        position: absolute;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        top: -9px;
-        left: 15px;
-        background-color: #fff;
-        padding: 0 5px;
-        padding-bottom: 0;
-        font-size: 14px;
-        color: #000;
+      @media (max-width: '570px') {
+        padding-right: 0;
       }
+
+      h3 {
+
+        font-size: 18px;
+        font-family: "Noto Sans";
+
+        @media (max-width: '570px') {
+          text-align: center;
+        }
+      }
+
+      p {
+        font-weight: 500;
+        font-family: "Noto Sans";
+      }
+
+
+      .first_last_name {
+        width: 100%;
+        margin-top: 25px;
+        display: grid;
+        grid-template-columns: 33% 33% 33%;
+        gap: 15px;
+
+        @media (max-width: '800px') {
+          grid-template-columns: auto;
+        }
+
+        div {
+          position: relative;
+
+          label {
+            position: absolute;
+            top: -9px;
+            left: 15px;
+            background-color: #fff;
+            padding: 0 5px;
+            padding-bottom: 0;
+            font-size: 14px;
+            color: #000;
+            font-family: "Noto Sans";
+            font-weight: 500;
+          }
+
+          input {
+            width: 100%;
+            height: 36px;
+            border-radius: 3px;
+            outline: none;
+            border: 1px #bab8b8 solid;
+            padding: 5px 15px;
+            background-color: #fff;
+            font-size: 15;
+            font-weight: 500;
+
+            @media (max-width: '1200px') {
+              width: 100%;
+            }
+
+            &:focus {
+              border: 1px solid blueviolet;
+              color: indigo;
+            }
+
+            &::placeholder {
+              font-size: 13px;
+              font-weight: 500;
+              letter-spacing: 1px;
+            }
+          }
+        }
+      }
+
+      .adress_country {
+        width: 100%;
+        margin-top: 25px;
+        display: grid;
+        grid-template-columns: 49% 50%;
+        gap: 15px;
+
+
+
+        .phone_input input {
+          font-size: 16px;
+        }
+
+        .postal_phone {
+          width: 100%;
+          display: grid;
+          grid-template-columns: 70% 30%;
+          gap: 15px;
+
+          @media (max-width: '800px') {
+            grid-template-columns: 67% 29%;
+          }
+
+          @media (max-width: '330px') {
+            grid-template-columns: auto;
+          }
+        }
+
+        @media (max-width: '800px') {
+          grid-template-columns: auto;
+        }
+
+        div {
+          // width: 100%;
+          position: relative;
+
+          label {
+            position: absolute;
+            top: -9px;
+            left: 15px;
+            background-color: #fff;
+            padding: 0 5px;
+            padding-bottom: 0;
+            font-size: 14px;
+            // color: #000;
+            font-family: "Noto Sans";
+            font-weight: 500;
+          }
+
+          input {
+            width: 100%;
+            height: 36px;
+            border-radius: 3px;
+            outline: none;
+            border: 1px #bab8b8 solid;
+            padding: 5px 15px;
+            background-color: #fff;
+            font-size: 15;
+            font-weight: 500;
+
+            &::placeholder {
+              color: #c9c7c7;
+            }
+
+            @media (max-width: '1200px') {
+              width: 100%;
+            }
+
+            &:focus input+label {
+              color: indigo;
+            }
+
+            &:focus {
+              border: 1px solid blueviolet;
+              color: indigo;
+            }
+
+
+
+            &::placeholder {
+              font-size: 13px;
+              font-weight: 500;
+              letter-spacing: 1px;
+            }
+          }
+        }
+      }
+
+      .selects {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: 21px;
+
+        select {
+          width: 100%;
+          height: 38px;
+          background-color: white;
+          border: 1px #bab8b8 solid;
+          border-radius: 3px;
+          display: inline-block;
+          font: inherit;
+          padding: 8px 45px 8px 10px;
+
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+          font-family: "Noto Sans";
+
+          @media (max-width: '450px') {
+            font-size: 14px;
+            padding: 6px 35px 6px 10px;
+            font: small;
+
+          }
+
+          option {
+            padding-bottom: 10px;
+            font-family: 'Montserrat';
+          }
+
+          // margin-right: 20px;
+          background-image: linear-gradient(45deg, transparent 50%, #000 50%),
+          linear-gradient(135deg, #000 50%, transparent 50%),
+          linear-gradient(to right, #fff, #fff);
+          background-position: calc(100% - 20px) calc(1em + 2px),
+          calc(100% - 15px) calc(1em + 2px),
+          100% 0;
+          background-size: 5px 5px,
+          5px 5px,
+          2.5em 2.5em;
+          background-repeat: no-repeat;
+
+          &:focus {
+            background-image:
+              linear-gradient(45deg, #000 50%, transparent 50%),
+              linear-gradient(135deg, transparent 50%, #000 50%),
+              linear-gradient(to right, #fff, #fff);
+            background-position:
+              calc(100% - 15px) 1em,
+              calc(100% - 20px) 1em,
+              100% 0;
+            background-size:
+              5px 5px,
+              5px 5px,
+              2.5em 2.5em;
+            background-repeat: no-repeat;
+            border-color: indigo;
+            outline: 0;
+
+            option {
+              color: #000;
+            }
+          }
+        }
+
+
+        margin-top: 20px;
+
+
+        @media (max-width: '570px') {
+          grid-template-columns: auto;
+        }
+
+
+      }
+
+      .credit_number {
+        width: 100%;
+        margin-top: 25px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: 20px;
+
+        @media (max-width: '800px') {
+          grid-template-columns: auto;
+        }
+
+        div {
+          position: relative;
+
+          label {
+            position: absolute;
+            top: -9px;
+            left: 15px;
+            background-color: #fff;
+            padding: 0 5px;
+            padding-bottom: 0;
+            font-size: 14px;
+            color: #000;
+            font-family: "Noto Sans";
+            font-weight: 500;
+          }
+
+          input {
+            width: 100%;
+            height: 36px;
+            border-radius: 3px;
+            outline: none;
+            border: 1px #bab8b8 solid;
+            padding: 5px 15px;
+            background-color: #fff;
+            font-size: 15;
+            font-weight: 500;
+
+            @media (max-width: '1200px') {
+              width: 100%;
+            }
+
+            &:focus {
+              border: 1px solid blueviolet;
+              color: indigo;
+            }
+
+            &::placeholder {
+              font-size: 13px;
+              font-weight: 500;
+              letter-spacing: 1px;
+            }
+          }
+        }
+      }
+
+      .credit_month_year {
+        width: 100%;
+        margin-top: 5px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        gap: 20px;
+        align-items: center;
+
+        @media (max-width: '1200px') {
+          grid-template-columns: auto;
+        }
+
+        .inputs {
+          display: flex;
+
+          input {
+            width: 100%;
+            height: 36px;
+            // border-radius: 3px;
+            outline: none;
+            border: 1px #bab8b8 solid;
+            padding: 5px 15px;
+            background-color: #fff;
+            font-size: 15;
+            font-weight: 500;
+          }
+
+          input:first-child {
+            border-top-left-radius: 3px;
+            border-bottom-left-radius: 3px;
+            border-right: 0;
+          }
+
+          input:nth-child(3) {
+            border-left: 0;
+            border-top-right-radius: 3px;
+            border-bottom-right-radius: 3px;
+          }
+        }
+
+        .card_logos {
+          display: grid;
+          grid-template-columns: auto auto auto auto;
+          align-items: center;
+          text-align: right;
+
+          img {
+            margin-left: auto;
+            width: 55px;
+
+            @media (max-width: '1200px') {
+              width: 40px;
+            }
+
+          }
+        }
+      }
+
+      .pay_btn {
+        width: 100%;
+        text-align: right;
+        margin-top: 20px;
+
+        button {
+          width: 103%;
+          // background-image: linear-gradient(to right, indigo 0%, #9966ec 51%, rgb(44, 11, 68) 100%);
+          background: indigo;
+          padding: 8px 15px;
+          border-radius: 4px;
+          color: #fff;
+          border: none;
+          font-size: 20px;
+         &:hover{
+           transition: all .3s;
+              transform: scale(1.04);
+         }
+          @media (max-width: '500px') {
+            font-size: 17px;
+            width: 100%;
+          }
+
+          span {
+            padding-left: 20px;
+            color: #cbc7c7;
+
+            @media (max-width: '370px') {
+              padding-left: 5px;
+            }
+          }
+        }
+      }
+
+
+
+
     }
 
-
-    input {
-      width: 50%;
-      height: 40px;
-      border-radius: 3px;
-      outline: none;
-      border: 2px #dedada solid;
-      padding: 5px 15px;
-      background-color: #fff;
-      font-size: 15;
-      font-weight: 500;
+    .pay_details {
+      width: 100%;
+      max-height: 100%;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      margin-top: 50px;
+      border-radius: 4px;
+      box-shadow: 0px 0px 3px 0px rgba(149, 133, 133, 0.75);
+      -webkit-box-shadow: 0px 0px 3px 0px rgba(149, 133, 133, 0.75);
+      -moz-box-shadow: 0px 0px 3px 0px rgba(149, 133, 133, 0.75);
 
       @media (max-width: '1200px') {
         width: 100%;
-      }
-    }
-
-    input::placeholder {
-      font-size: 13px;
-      font-weight: 500;
-      letter-spacing: 1px;
-    }
-
-
-    input:focus {
-      border: 2px solid blueviolet;
-      color: indigo;
-    }
-
-
-  }
-
-  .pay_details {
-    width: 30%;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
-    -webkit-box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
-    -moz-box-shadow: 1px 1px 8px -2px rgba(0, 0, 0, 0.74);
-
-    @media (max-width: '1200px') {
-      width: 100%;
-    }
-
-    .price {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 10px 0;
-
-      h4 {
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 20px;
-        margin-right: 30px;
+        margin-top: 15px;
 
       }
 
-      h1 {
-        color: indigo;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+      .price {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+
+        h4 {
+          font-size: 18px;
+          font-family: "Noto Sans";
+          font-weight: 500;
+
+        }
+
+        h1 {
+          font-size: 22px;
+          font-weight: 600;
+          color: indigo;
+          font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+
+        h1+span {
+
+          color: indigo;
+          font-weight: 600;
+        }
+
+        span {
+          font-size: 15px;
+          font-weight: 500;
+          font-family: "Open Sans";
+        }
+
       }
 
-      h1+span {
-        color: indigo;
+      .back_btn {
+        margin-top: 20px;
 
-      }
+        a {
+          display: flex;
+          align-items: center;
+          text-decoration: underline;
 
-      span {
-        font-size: 20px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+          &:hover {
+            .back_icon {
 
+              transition: all .3s;
+              transform: translateX(-10px);
+            }
+          }
+        }
+
+        .back_icon {
+          color: indigo;
+          margin-right: 10px;
+        }
       }
 
     }
-
   }
 }
