--- a/src/UI_Design/CartItemsStyles/styles.module.scss
+++ b/src/UI_Design/CartItemsStyles/styles.module.scss
@@ -4,22 +4,37 @@ tr {
     text-align: start;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-left: 10px;
+    border: 1px dotted #494747;
 
     td {
-
-
-        &:nth-child(2) {
-            padding: 20px;
+        text-align: left;
+      padding: 25px 50px;
+      .img_admin{
+        width: 200px;
+      }
+        &:nth-child(1) {
+            padding: 10px;
+            text-align: center;
+            // width: 200px;
+            // margin-right: auto;
 
             img {
-                width: 90%;
+                width: 70%;
                 border-radius: 5px;
                 mix-blend-mode: multiply;
-                height: 100px;
+                height: 150px;
+                // margin-left: auto;
+                // margin-right: auto;
 
                 @media (max-width: '1100px') {
                     mix-blend-mode: multiply;
                     width: 150px;
+                    margin: auto;
+                }
+
+                @media (max-width: '450px') {
+                    mix-blend-mode: multiply;
+                    width: 70%;
                     margin: auto;
                 }
 
@@ -30,129 +45,42 @@ tr {
                 width: 100%;
 
             }
+
         }
 
 
+        
+
+        .next_prev_icons {
+            .arrow {
+                color: red;
+            }
+
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
 
         padding: 10px;
-    }
 
-
-
-    .plus_minus_btn {
-        display: flex;
-        border: 1px solid indigo;
-        border-radius: 4px;
-        justify-content: space-between;
-        width: 100px;
-        text-align: right;
-        margin-left: auto;
-        height: 30px;
-
-        span {
-            font-size: 20px;
-        }
-
-        button {
-            background: indigo;
-            outline: none;
-            width: 30px;
-            border: none;
-            height: 100%;
-            border-right: 1px solid indigo;
-            color: #fff;
-            border: none;
-
-            &:hover {
-
-                .plus_icon,
-                .minus_icon {
-                    transition: all .4s;
-                    transform: rotate(180deg);
-                }
-
-            }
-        }
-    }
-
-    .threeDote {
-        text-align: center;
-        position: relative;
-
-        .threeIcon {
-            &:hover {
-                transition: all .4s ease;
-                transform: scale(1.1);
-            }
-        }
-
-        @media (max-width: '990px') {
-            text-align: right;
-        }
-
-        .delete {
-
-            text-align: right;
-            width: 150px;
-            position: absolute;
-            left: -70%;
-            z-index: 10;
-            padding: 10px;
-            padding-top: 0;
-            padding-right: 3px;
-            margin-left: auto;
-            border-radius: 5px;
-            background: #fff;
-            box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-            -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-            -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
-.close_btn{
-    color: #777;
-    &:hover{
-        transform: scale(1.4);
-        transition: all .3s;
-    }
-}
-            @media (max-width: '950px') {
-                left: 80%;
-            }
-
-            @media (max-width: '800px') {
-                left: 70%;
-            }
-
-            @media (max-width: '600px') {
-                left: 60%;
-            }
-
-            @media (max-width: '450px') {
-                left: 40%;
-            }
-
-            @media (max-width: '320px') {
-                left: 20%;
-            }
+        .delete_product {
 
             .delete_btn {
                 position: relative;
                 width: 100px;
-                height: 25px;
+                height: 30px;
                 cursor: pointer;
                 display: flex;
                 align-items: center;
-                border: none;
+                border: 1px solid indigo;
                 background-color: #fff;
-                border-radius: 2px;
+                border-radius: 4px;
                 overflow: hidden;
-                margin-bottom: 7px;
 
-                @media (max-width: '1170px') {}
+                @media (max-width: '1170px') {
+                    margin-left: auto;
 
-                &:hover {
-                    transition: all .2s;
-                    box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                    -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
-                    -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+
                 }
             }
 
@@ -163,20 +91,20 @@ tr {
             }
 
             .delete_btn .btn_text {
-                transform: translateX(40px);
+                transform: translateX(20px);
                 color: indigo;
                 font-weight: 600;
-
             }
 
             .delete_btn .btn_icon {
                 position: absolute;
-                transform: translateX(0);
+                transform: translateX(70px);
                 height: 100%;
-                width: 25px;
+                width: 39px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                border-left: 1px solid indigo;
                 color: indigo;
             }
 
@@ -187,18 +115,200 @@ tr {
             }
 
             .delete_btn:hover .btn_icon {
-                width: 90px;
-                transform: translateX(40px);
+                width: 100px;
+                transform: translateX(0);
             }
 
             .delete_btn:active {
                 transform: translate(3px, 3px);
             }
         }
+
+        .plus_minus_btn {
+            display: flex;
+            border: 1px solid indigo;
+            border-radius: 4px;
+            justify-content: space-between;
+            width: 100px;
+            height: 30px;
+
+            @media (max-width: '1170px') {
+                margin-left: auto;
+
+
+            }
+
+            span {
+                font-size: 20px;
+            }
+
+            button {
+            border-radius: 4px;
+           background: transparent;
+                outline: none;
+                width: 30px;
+                border: none;
+                height: 100%;
+                border-right: 1px solid indigo;
+                color: indigo;
+                border: none;
+
+                &:hover {
+
+                    .plus_icon,
+                    .minus_icon {
+                        transition: all .4s;
+                        transform: rotate(180deg);
+                    }
+
+                }
+            }
+        }
+
+        .count{
+            font-size: 20px;
+        }
+
+        // ~~~~~~~Admin Page uchun ~~~~~~~~~~//
+        .threeDote {
+            text-align: center;
+            position: relative;
+
+            .threeIcon {
+                &:hover {
+                    transition: all .4s ease;
+                    transform: scale(1.1);
+                }
+            }
+
+            @media (max-width: '990px') {
+                text-align: right;
+            }
+
+            .delete {
+
+                text-align: right;
+                width: 150px;
+                position: absolute;
+                left: -70%;
+                z-index: 10;
+                padding: 10px;
+                padding-top: 0;
+                padding-right: 3px;
+                margin-left: auto;
+                border-radius: 5px;
+                background: #fff;
+                box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+                -webkit-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+                -moz-box-shadow: 0px 0px 5px 0px rgba(207, 199, 199, 1);
+
+                .close_btn {
+                    color: #777;
+
+                    &:hover {
+                        transform: scale(1.4);
+                        transition: all .3s;
+                    }
+                }
+
+                @media (max-width: '950px') {
+                    left: 80%;
+                }
+
+                @media (max-width: '800px') {
+                    left: 70%;
+                }
+
+                @media (max-width: '600px') {
+                    left: 60%;
+                }
+
+                @media (max-width: '450px') {
+                    left: 40%;
+                }
+
+                @media (max-width: '320px') {
+                    left: 20%;
+                }
+
+                .delete_btn {
+                    position: relative;
+                    width: 100px;
+                    height: 25px;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    border: none;
+                    background-color: #fff;
+                    border-radius: 2px;
+                    overflow: hidden;
+                    margin-bottom: 7px;
+
+                    @media (max-width: '1170px') {}
+
+                    &:hover {
+                        transition: all .2s;
+                        box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                        -webkit-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                        -moz-box-shadow: 0px 1px 4px -1px rgba(119, 36, 197, 0.75);
+                    }
+                }
+
+                .delete_btn,
+                .btn_icon,
+                .btn_text {
+                    transition: all 0.3s;
+                }
+
+                .delete_btn .btn_text {
+                    transform: translateX(40px);
+                    color: indigo;
+                    font-weight: 600;
+
+                }
+
+                .delete_btn .btn_icon {
+                    position: absolute;
+                    transform: translateX(0);
+                    height: 100%;
+                    width: 25px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    color: indigo;
+                }
+
+
+
+                .delete_btn:hover .btn_text {
+                    color: transparent;
+                }
+
+                .delete_btn:hover .btn_icon {
+                    width: 90px;
+                    transform: translateX(40px);
+                }
+
+                .delete_btn:active {
+                    transform: translate(3px, 3px);
+                }
+            }
+
+        }
+
     }
 
 
+
+
+
+
+
 }
+
+
+
+
 
 .close_modal {
     width: 100%;
@@ -281,29 +391,31 @@ tr {
     padding: 10px;
     display: grid;
     grid-template-columns: 50% 50%;
-.smallImg {
-                    width: 100px;
-                    height: 80px;
 
-                    @media (max-width: '450px') {
-                        width: 50px;
-                        height: 40px;
+    .smallImg {
+        width: 100px;
+        height: 80px;
 
-
-                    }
-                }
-
-                .bigImg {
-                    width: 100%;
-                    height: 200px;
-
-                    @media (max-width: '450px') {
-                        width: 100%;
-                        height: 150px;
+        @media (max-width: '450px') {
+            width: 50px;
+            height: 40px;
 
 
-                    }
-                }
+        }
+    }
+
+    .bigImg {
+        width: 100%;
+        height: 200px;
+
+        @media (max-width: '450px') {
+            width: 100%;
+            height: 150px;
+
+
+        }
+    }
+
     @media (max-width: '900px') {
         grid-template-columns: auto;
         overflow-y: scroll;
@@ -424,9 +536,11 @@ tr {
 
     }
 }
-.show{
+
+.show {
     display: block;
 }
-.hide{
+
+.hide {
     display: none;
 }
