--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,15 @@ input:user-invalid{
   margin: 0;
   box-sizing: border-box;
 }
-
+.progress_bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: var(--red);
+  transform-origin: 0%;
+}
 ::-webkit-scrollbar {
   width: 2px;
   height: 1px;
