add navbar bottom

--- a/src/Admin/Pages/Add_Product/styles.module.scss
+++ b/src/Admin/Pages/Add_Product/styles.module.scss
@@ -6,9 +6,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+padding-left: 20%;
+ @media (max-width: '1000px') {
+      padding-left: 20px;
+    }
   form {
-    width: 70%;
+    width: 100%;
     margin: auto;
 
     @media (max-width: '1200px') {
