--- a/src/Admin/Pages/All_Products/styles.module.scss
+++ b/src/Admin/Pages/All_Products/styles.module.scss
@@ -1,13 +1,17 @@
 .all_products {
     width: 100%;
     padding: 0 20px;
-    padding-top: 80px;
-
+    padding-top: 70px;
+    padding-left: 20%;
+    position: relative;
+     @media (max-width: '1200px') {
+      padding-left: 20px;
+      padding-top: 50px;
+    }
     .add_product_btn {
 
-        width: 80%;
-        margin: auto;
-        text-align: end;
+        width: 100%;
+        text-align: right;
 
         @media (max-width: '1170px') {
             width: 100%;
@@ -31,7 +35,7 @@
             border-radius: 4px;
             border: none;
             padding: 5px;
-            margin: 20px 0;
+            margin: 10px 0;
 
             &:hover {
                 transition: all .4s;
@@ -173,8 +177,7 @@
 
     .overflow_table {
         // overflow-x: auto;
-        width: 80%;
-        margin: auto;
+        width: 100%;
         border-radius: 5px;
         // border: 1px solid indigo;
 
@@ -205,14 +208,15 @@
                 border: 1px solid #ddd;
                 padding: .35em;
             }
-            
-            th,td{
+
+            th,
+            td {
                 padding: .625em;
                 text-align: start;
 
                 &:nth-child(1) {
                     width: 200px;
-                      
+
                     @media (max-width: '1170px') {
 
                         width: 100%;
