--- a/src/Admin/Pages/Dashboard/styles.module.scss
+++ b/src/Admin/Pages/Dashboard/styles.module.scss
@@ -1,65 +1,104 @@
 .dashboard {
     width: 100%;
-    min-height: 100vh;
-    margin-top: 70px    ;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 15px;
-    padding: 0 30px;
-   place-items: center;
+    // max-height: 100vh;
+
+    padding: 0 15px;
+    padding-left: 19%;
+margin-top: 60px;
     @media (max-width: '1024px') {
-        grid-template-columns: auto auto auto;
         padding: 20px;
     }
 
-    @media (max-width: '700px') {
-        grid-template-columns: auto auto;
 
-    }
-
-    @media (max-width: '400px') {
-        grid-template-columns: auto;
-
-    }
 
     .service {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        padding-top: 15px;
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        gap: 10px;
         width: 100%;
-        padding: 25px;
-        border-radius: 5px;
-        box-shadow: -1px 0px 14px 2px rgba(0, 0, 0, 0.2);
+        padding-bottom: 4px;
 
-        &:hover {
-            transition: all .3s;
-            transform: scale(1.05);
+        @media (max-width: '1024px') {
+            grid-template-columns: auto auto auto;
+            padding: 20px;
         }
-        h2{
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            margin-top: 30px;
+
+        @media (max-width: '700px') {
+            grid-template-columns: auto auto;
 
         }
 
-         
-         
+        @media (max-width: '400px') {
+            grid-template-columns: auto;
+
+        }
+
+        .service_about {
+         border: 1px solid rgb(223, 192, 244);
+            display: flex;
+            align-items: center;
+            border-radius: 5px;
+            padding: 5px;
+            
+            .icon {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: rgba(217, 174, 248, 0.5);
+                border-radius: 3px;
+                margin-right: 20px;
+                width: 30px;
+                height: 30px;
+                padding: 4px;
+
+            }
+
+            .name_price {
+                h3 {
+                    font-size: 12px;
+                    font-family: "Poppins", sans-serif;
+                    font-weight: 600;
+                }
+
+                p {
+                    font-size: 14px;
+                    font-family: "Poppins", sans-serif;
+                    font-weight: 500;
+                }
+                .active_users{
+                    font-size: 12px;
+                    color: rgb(12, 183, 12);
+                }
+            }
+        }
+
+
+
     }
+   .charts{
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 100px;
+     
+   }
+}
+
+.red {
+    background-color: rgba(247, 101, 101, 0.7);
 
 }
-.red{
-    background-color: rgba(247, 101, 101, 0.7);
-    
-}
-.yellow{
+
+.yellow {
     background-color: rgba(240, 240, 58, 0.3);
 
 }
-.green{
+
+.green {
     background-color: rgba(140, 240, 140, 0.5);
 
 }
-.blue{
+
+.blue {
     background-color: rgba(132, 101, 243, 0.3);
 
 }
