--- a/src/Admin/Pages/Users/styles.module.scss
+++ b/src/Admin/Pages/Users/styles.module.scss
@@ -6,7 +6,7 @@
     height: auto;
     padding: 0 20px;
     padding-top: 80px;
-
+padding-left: 20%;
     @media (max-width: '1170px') {
         flex-wrap: wrap;        
         align-items: center;
