--- a/src/Components/Header/style.module.scss
+++ b/src/Components/Header/style.module.scss
@@ -1,171 +1,5 @@
-// .slider {
-//     width: 100%;
-//     height: 100vh;
-//     position: relative;
-//     overflow: hidden;
-//     background-color: black;
-//     @media (max-width: '800px') {
-//            height: 65vh;
 
-//     }
-// }
-
-// .slide {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     opacity: 0;
-//     transform: translateX(-50%);
-//     transition: all 0.5s ease;
-//     backdrop-filter: blur(10px);
-
-//     @media (max-width: '600px') {
-//         img {
-//             width: 100%;
-//             height: 100%;
-//         }
-//     }
-
-
-// }
-
-
-// .slide img {
-//     width: 100%;
-//     height: 100%;
-// }
-
-// .content {
-//     position: absolute;
-//     text-align: center;
-//     top: 17rem;
-//     left: 50%;
-//     width: 60%;
-//     padding: 3rem;
-//     display: flex;
-//     justify-self: center;
-//     align-items: center;
-//     flex-direction: column;
-//     transform: translateX(-50%);
-//     backdrop-filter: blur(5px);
-//     animation: slide-up 1s alternate 0.5s;
-//     animation-fill-mode: forwards;
-
-//     @media (max-width: '600px') {
-//         width: 80%;
-//         padding: 2rem;
-
-//     }
-
-//     button {
-//         background-color: indigo;
-//         color: #fff;
-//         padding: 7px;
-//         border: none;
-//         border-radius: 5px;
-//         font-family: 'Montserrat';
-//         font-size: 22px;
-
-//         &:hover {
-//             transition: all .3s;
-//             transform: scale(1.05);
-//         }
-
-//     }
-
-//     h2 {
-//         font-size: 4.5rem;
-//         font-family: 'Montserrat';
-
-//         @media (max-width: '800px') {
-//             font-size: 3rem;
-//         }
-
-//         @media (max-width: '420px') {
-//             font-size: 1.5rem;
-//         }
-//     }
-// }
-
-// @keyframes slide-up {
-//     0% {
-//         visibility: visible;
-//         top: 17rem;
-//     }
-
-//     100% {
-//         visibility: visible;
-//         top: 8rem;
-//     }
-// }
-
-
-
-// .content>* {
-//     color: #fff;
-//     margin-bottom: 1rem;
-// }
-
-// .current {
-//     opacity: 1;
-//     transform: translateX(0);
-// }
-
-// .current .content {
-//     opacity: 1;
-// }
-
-// .arrow {
-//     border: 2px solid #fff;
-//     border-radius: 50%;
-//     background: transparent;
-//     color: #fff;
-//     width: 2.5rem;
-//     height: 2.5rem;
-//     cursor: pointer;
-//     position: absolute;
-//     top: 50%;
-//     transform: translateY(-50%);
-//     z-index: 2;
-//     backdrop-filter: blur(10px);
-
-//     @media (max-width: '1024px') {
-//         width: 1.5rem;
-//         height: 1.5rem;
-//         border: 1px solid #fff;
-//     }
-// }
-
-// .arrow:hover {
-//     backdrop-filter: brightness(60%);
-
-// }
-
-// .next {
-//     right: 1.5rem;
-//     color: #fff;
-//      @media (max-width: '800px') {
-//         right: 0.5rem;
-//     }
-// }
-
-// .prev {
-//     left: 1.5rem;
-//     color: #fff;
-//      @media (max-width: '800px') {
-//         left: 0.5rem;
-//     }
-// }
-
-// hr {
-//     height: 2px;
-//     background: #fff;
-//     width: 50%;
-// }
-
-.slider {
+.header {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -259,20 +93,22 @@
            width: 100%;
         }
             input {
-                width: 100%;
+                width: 99%;
                 outline: none;
                 padding: 10px;
-                border-radius: 0;
-                height: 30px;
+                border-radius: 4px;
+                height: 35px;
+                margin: auto;
                 font-size: 18px;
-                border: 1px solid #fff;
+                border: none;
+                background-color: rgb(243, 234, 249);
             }
 
             .search_btn {
                 position: absolute;
-                background-color: #fff;
+                background-color: rgb(243, 234, 249);
                 top: 7px;
-                right: 15px;
+                right: 2%;
                 color: #666;
             }
         }
