--- a/src/Pages/home/styles.module.scss
+++ b/src/Pages/home/styles.module.scss
@@ -1,10 +1,10 @@
 .home{
     .product_name{
-    text-align: center;
+    text-align: end;
     font-weight: 600;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 50px;
-    padding: 30px 0;
+    font-size: 30px;
+    padding: 30px;
     @media (max-width: '1024px') {
      font-size: 18px;         
     }
