--- a/src/Components/NavbarDown/styles.module.scss
+++ b/src/Components/NavbarDown/styles.module.scss
@@ -1,30 +1,70 @@
-.navbar_down{
+.navbar_down {
     width: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     background-color: #fff;
-    height: 40px;
+    height: auto;
     z-index: 1000;
     padding: 5px;
     display: none;
-     @media (max-width: '800px') {
-                display: block;
-             }
-             .links{
-                display: grid;
-                grid-template-columns: auto auto auto auto auto;
-                div{
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    span{
-                        font-size: 14px;
-                        font-weight: 500;
-                        font-family: "Noto Sans";
-                    }
+    
+    border-top: 1px solid #ccc7c7;
+
+    @media (max-width: '800px') {
+        display: block;
+    }
+
+    .links {
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        gap: 2px;
+
+        button {
+            background-color: transparent;
+            border: none;
+
+            a {
+                color: #444;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: "Noto Sans";
+
+                span {
+                    margin-top: 5px;
+                    font-size: 12px;
+                    font-weight: 500;
                 }
 
-             }
+
+
+
+            }
+
+            .cart {
+                position: relative;
+                .totalQuantity {
+                    position: absolute;
+                    top: -10px;
+                    right: 20%;
+                }
+            }
+
+
+            .activeLink {
+                color: indigo;
+                font-weight: 600;
+
+                span {
+                    margin-top: 5px;
+                    font-weight: 600;
+                }
+
+            }
+
+        }
+
+    }
 }
