--- a/src/Pages/home/styles.module.scss
+++ b/src/Pages/home/styles.module.scss
@@ -1,6 +1,6 @@
 .home{
     .product_name{
-    text-align: end;
+    text-align: center;
     font-weight: 600;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
@@ -11,5 +11,9 @@
     @media (max-width: '600px') {
      font-size: 15px;         
     }
+
 }
+ @media (max-width: '1024px') {
+     padding-bottom: 40px;    
+    }
 }
