--- a/src/UI_Design/ProductList/styles.module.scss
+++ b/src/UI_Design/ProductList/styles.module.scss
@@ -3,11 +3,10 @@
     grid-template-columns: 19% 19% 19% 19% 19%;
     margin: auto;
     gap: 15px;
-    padding: 0 20px;
 
     @media (max-width: '1024px') {
         grid-template-columns: 32% 32% 32%;
-        padding: 30px;
+        // padding: 30px;
     }
 
     // @media (max-width: '900px') {
@@ -17,14 +16,14 @@
     // }
     @media (max-width: '600px') {
         grid-template-columns: 49% 49%;
-        padding: 10px;
+        // padding: 10px;
         gap: 10px;
 
     }
 
     @media (max-width: '310px') {
         grid-template-columns: auto;
-        padding: 10px;
+        // padding: 10px;
 
     }
 
